# ComputerNetworksLabs

SK_lab/: echo-client.c  echo-server.c
SK_lab/ex/: echo-client.c  echo-server.c
SK_lab2/: CMakeLists.txt  echo-client.c  echo-server.c  nums-server.c  struct-in-memory.c
SK_lab2/ex/: client  server
SK_lab3/: Makefile  client.c  server.c
SK_lab4/: Makefile  client.c  poll-server-telnet.c
SK_lab5/: Makefile  time-client.c  time-server.c
